<resources>
    <string name="app_name">EazyTime</string>

    <string name="placeholder">Hie chunnt richtig geile scheiss häre</string>

    <string name="project_fragment_title">Projekte</string>
    <string name="calendar_fragment_title">Kalender</string>
    <string name="geofence_fragment_title">Arbeitsort</string>

    <string name="bottom_navigation_project">Projekte</string>
    <string name="bottom_navigation_calendar">Kalender</string>
    <string name="bottom_navigation_geofence">Arbeitsort</string>

    <string name="permission_request_rationale">Um einen Arbeitsort einzurichten und zu verwenden, wird die
        Lokalisierung
        benötigt.
    </string>
    <string name="OK">OK</string>
    <string name="geofence_geofence_flow_btn_proceed">Weiter</string>
    <string name="geofence_geofence_flow_btn_back">Zurück</string>

    <string name="geofence_edit_fragment_title">Arbeitsort bearbeiten</string>
    <string name="geofence_edit_fragment_edittext_hint">Name des Arbeitsorts</string>
    <string name="geofence_edit_fragment_btn_change">Arbeitsort ändern</string>
    <string name="geofence_edit_fragment_btn_save">Speichern</string>
    <string name="geofence_edit_error_no_name">Bitte geben Sie einen Namen ein!</string>

    <string name="geofence_empty_fragment_title">Keine Arbeitsorte</string>
    <string name="geofence_emtpy_fragment_info">Hinzugefügte Arbeitsorte werden hier angezeigt.</string>
    <string name="geofence_emtpy_fragment_icon_text">Arbeitsort Bild</string>

    <string name="project_emtpy_fragment_icon_text">Projekt icon</string>
    <string name="project_empty_fragment_title">Keine Projekte</string>
    <string name="projects_emtpy_fragment_info">Hinzugefügte Projekte werden hier angezeigt.</string>

    <string name="calendar_emtpy_fragment_icon_text">Kalender icon</string>
    <string name="calendar_empty_fragment_title">Keine Einträge</string>
    <string name="calendar_emtpy_fragment_info">Tage mit Buchungen werden hier angezeigt.</string>

    <string name="geofence_marker_fragment_info">Markiere das Zentrum des Arbeitsorts indem du die gewünschte Position
        auf
        der Karte antippst!
    </string>
    <string name="geofence_radius_fragment_info">Definiere den Radius des Arbeitsorts mit Hilfe eines Zweifinger-Pinch!
    </string>

    <string name="geofence_listitem_switch_text">Aktiv</string>

    <string name="geofence_detail_activity_toast_marker_error">Bitte einen Marker setzen!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_project_fragment_title">Projekt hinzufügen...</string>

    <string name="et_hint_add_project_name">Projektname</string>
    <string name="et_hint_add_project_short_code">Kürzel (maximal 3 Zeichen)</string>
    <string name="tv_label_add_project_color_picker">Projektfarbe:</string>
    <string name="tv_label_add_project_on_widget">Auf Widget anzeigen %1$s/5</string>
    <string name="tv_label_add_project_default">Als Standasrdprojekt festlegen</string>
    <string name="error_short_code_length">Maximal 3 Zeichen!</string>
    <string name="color_picker_dialog_title">Wähle die Projektfarbe</string>
    <string name="error_project_name_length">Name darf nicht leer sein</string>
    <string name="bu_save_project">Speichern</string>
    <string name="bu_delete_project">Löschen</string>
    <string name="default_projectName">MyProject</string>
    <string name="defaul_color_string">#ff8787</string>
    <string name="is_default_project">Standardprojekt</string>

    <string name="action_widget_button_one">ET_WIDGET_BUTTON_ONE</string>
    <string name="action_widget_button_two">ET_WIDGET_BUTTON_TWO</string>
    <string name="action_widget_button_three">ET_WIDGET_BUTTON_THREE</string>
    <string name="action_widget_button_four">ET_WIDGET_BUTTON_FOUR</string>
    <string name="action_widget_button_five">ET_WIDGET_BUTTON_FIVE</string>
    <string name="ExtraKeyProjectId">KEY_PROJECT_ID</string>
    <string name="ExtraKeyProjectName">KEY_PROJECT_NAME</string>
    <string name="ExtraKeyProjectShortCode">SHORT_CODE</string>
    <string name="ExtraKeyUpdateNotification">UPDTAE_NOTFICATION</string>
    <string name="no_projects_for_widget">Keine Projekte mit "Soll auf AppWidget erscheinen" gefunden</string>

    <string name="geofence_unknown_error">Unbekannter Fehler: Der Arbeitsort-Service ist zur Zeit nicht erreichbar.
    </string>
    <string name="geofence_not_available">Der Arbeitsort-Service ist nicht erreichbar. Wählen Sie in Einstellungen >
        Standort > Suchmethode \'Hohe Genauigkeit\'.
    </string>
    <string name="geofence_too_many_geofences">Die App hat zuviele Arbeitsorte registriert.</string>
    <string name="geofence_too_many_pending_intents">Die App hat zuviele Arbeitsorte registriert.</string>
    <string name="geofence_detail_activity_toast_saved_geofence">Arbeitsort gespeichert</string>
    <string name="geofence_fragment_toast_activated_geofence">Arbeitsort aktiviert</string>
  
    <string name="title_activity_maps">Map</string>

    <string name="active_projects_cant_be_deleted">Projekte mit einer aktiven Buchung können nicht gelöscht werden</string>
    <string name="priject_is_deleted">Projekt wurde gelöscht</string>
    <string name="rollback">Rückgängig</string>
    <string name="geofence_powersafe_dialog_title">Arbeitsort und Energie sparen</string>
    <string name="geofence_powersafe_dialog_message">Die einwandfreie Funktion von Arbeitsorterkennung ist im Energie-Spar-Modus
        nicht gewährleistet.
    </string>
    <string name="geofence_powersafe_dialog_checkbox_hint">Hinweis künftig nicht mehr anzeigen</string>

    <string name="language">de</string>
    <string name="now">jetzt</string>
    <string name="ongoing">aktiv</string>
    <string name="date_pattern">EEEE, dd. MM. yyyy</string>
    <string name="time_range_pattern">%1$s - %2$s</string>
    <string name="total_workhours_pattern">Gesamt: %1$s</string>
    <string name="Suchen">Search</string>
</resources>
