<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:id="@+id/geoFenceFragmentEdit">

    <TextView
            android:text="@string/geofence_edit_fragment_title"
            android:id="@+id/tv_geoFenceEditTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/eazyTime_margin_top_geofence_flow"
            android:layout_marginBottom="@dimen/eazyTime_margin_bottom_geofence_flow"
            android:layout_marginStart="@dimen/eazyTime_margin_start_geofence_flow"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_geoFenceEditName"
            android:textSize="@dimen/eazyTime_text_size_title_geofence_flow"
            app:layout_constraintStart_toStartOf="parent"/>

    <EditText
            android:id="@+id/tv_geoFenceEditName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="@dimen/eazyTime_text_size_textview_geofence_flow"
            android:layout_marginTop="@dimen/eazyTime_margin_top_geofence_flow"
            android:layout_marginBottom="@dimen/eazyTime_margin_bottom_geofence_flow"
            android:layout_marginStart="@dimen/eazyTime_margin_start_geofence_flow"
            android:hint="@string/geofence_edit_fragment_edittext_hint"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toBottomOf="@+id/tv_geoFenceEditTitle"
            app:layout_constraintBottom_toTopOf="@+id/btn_geoFenceSave"
            app:layout_constraintStart_toStartOf="parent" tools:ignore="Autofill"/>


    <Button
            android:id="@+id/btn_geoFenceSave"
            android:text="@string/geofence_edit_fragment_btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/eazyTime_margin_end_geofence_flow"
            android:layout_marginTop="@dimen/eazyTime_margin_top_geofence_flow"
            android:layout_marginBottom="@dimen/eazyTime_margin_bottom_geofence_flow"
            android:layout_marginStart="@dimen/eazyTime_margin_start_geofence_flow"
            android:textColor="@color/eazyTime_colorWhite"
            android:background="@drawable/button_rounded_prefered"
            app:layout_constraintTop_toBottomOf="@id/tv_geoFenceEditName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_geoFenceChange"
            app:layout_constraintVertical_bias="0.0"/>

    <Button
            android:id="@+id/btn_geoFenceChange"
            android:text="@string/geofence_edit_fragment_btn_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/eazyTime_margin_end_geofence_flow"
            android:layout_marginBottom="@dimen/eazyTime_margin_bottom_geofence_flow"
            android:layout_marginStart="@dimen/eazyTime_margin_start_geofence_flow"
            android:textColor="@color/eazyTime_colorSelected"
            android:background="@drawable/button_rounded"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_geoFenceSave"
            app:layout_constraintStart_toEndOf="@id/btn_geoFenceSave"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.0"
    />

</androidx.constraintlayout.widget.ConstraintLayout>