<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:id="@+id/geoFenceFragmentRadius">

    <TextView
            android:text="@string/geofence_radius_fragment_info"
            android:id="@+id/tv_geoFenceRadiusInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/eazyTime_text_size_textview_geofence_flow"
            android:paddingEnd="@dimen/eazyTime_padding_start_geofence_flow_text"
            android:paddingStart="@dimen/eazyTime_padding_end_geofence_flow_text"
            android:layout_marginTop="@dimen/eazyTime_margin_top_geofence_flow"
            android:layout_marginBottom="@dimen/eazyTime_margin_bottom_geofence_flow"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_geoFenceRadiusProceed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <Button
            android:id="@+id/btn_geoFenceRadiusProceed"
            android:text="@string/geofence_geofence_flow_btn_proceed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/eazyTime_margin_end_geofence_flow"
            android:layout_marginTop="@dimen/eazyTime_margin_top_geofence_flow"
            android:layout_marginBottom="@dimen/eazyTime_margin_bottom_geofence_flow"
            android:layout_marginStart="@dimen/eazyTime_margin_start_geofence_flow"
            android:textColor="@color/eazyTime_colorWhite"
            android:background="@drawable/button_rounded_prefered"
            app:layout_constraintTop_toBottomOf="@id/tv_geoFenceRadiusInfo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_geoFenceRadiusBack"
            app:layout_constraintVertical_bias="0.0"

    />

    <Button
            android:id="@+id/btn_geoFenceRadiusBack"
            android:text="@string/geofence_geofence_flow_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/eazyTime_margin_end_geofence_flow"
            android:layout_marginBottom="@dimen/eazyTime_margin_bottom_geofence_flow"
            android:layout_marginStart="@dimen/eazyTime_margin_start_geofence_flow"
            android:textColor="@color/eazyTime_colorSelected"
            android:background="@drawable/button_rounded"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_geoFenceRadiusProceed"
            app:layout_constraintStart_toEndOf="@id/btn_geoFenceRadiusProceed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.0"
    />
</androidx.constraintlayout.widget.ConstraintLayout>