<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".calendar.CalendarFragment"
        android:background="@color/eazyTime_colorBackground">

    <ListView
            android:id="@+id/lv_calendar"
            android:layout_width="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_height="0dp">
    </ListView>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:visibility="visible"
            android:id="@+id/calendar_no_calendar_entries"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintVertical_bias="0.3">
        <ImageView
                android:id="@+id/iv_noCalendar"
                android:src="@drawable/ic_calendar"
                android:layout_width="@dimen/eazyTime_empty_fragment_icon_width"
                android:layout_height="@dimen/eazyTime_empty_fragment_icon_height"
                android:layout_marginTop="@dimen/eazyTime_empty_fragment_icon_marginTop"
                android:layout_marginBottom="@dimen/eazyTime_empty_fragment_icon_marginBottom"
                app:backgroundTint="@color/eazyTime_colorBackgroundText"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tv_noCalendar"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintVertical_bias="0.3"
                android:contentDescription="@string/calendar_emtpy_fragment_icon_text"/>
        <TextView
                android:id="@+id/tv_noCalendar"
                android:text="@string/calendar_empty_fragment_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/eazyTime_empty_fragment_title_textSize"
                android:layout_marginBottom="@dimen/eazyTime_empty_fragment_title_marginBottom"
                app:layout_constraintTop_toBottomOf="@+id/iv_noCalendar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tv_noCalendarHint"
                app:layout_constraintVertical_bias="0.3"
                android:textColor="@color/eazyTime_colorBackgroundText"/>
        <TextView
                android:id="@+id/tv_noCalendarHint"
                android:text="@string/calendar_emtpy_fragment_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_noCalendar"
                app:layout_constraintVertical_bias="0.3"
                android:textColor="@color/eazyTime_colorBackgroundText"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>